--- a/pages/interface-modules/IM-0100.md
+++ b/pages/interface-modules/IM-0100.md
@@ -1,21 +1,25 @@
 ---
 layout: default
-title: 6-Channel MIPI interface
+title: IM-0100
 parent: Interface Modules
 nav_order: 2
 has_children: true
 has_toc: false
 ---
 
-# 6-Channel MIPI interface
+# 6-Channel MIPI interface module
 
 The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 
 ---
 
+<p align="center">
+<img src="/assets/images/pages/interface-modules/IM-0100/IM-0100%20Render.png" width="150">
+</p>
+
 ## Description
 
-The MXxxx allows you to connect up to 6 MIPI cameras to the MODULE-X device. 
+The IM-0100 allows you to connect up to 6 MIPI cameras to the MODULE-X device. 
 The maximum number of cameras depends on the Jetson Module. 
 For the Jetson Nano, you can only connect up to 3 cameras. 
 For the Jetson TX2 NX and the Jetson Xavier NX, you can connect up to 6 cameras.
@@ -34,7 +38,7 @@ If you need an other camera, please contact us at [support](mailto:support@ai-bl
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/6-channel-mipi/BlockDiagram.svg" width="300">
+<img src="/assets/images/pages/interface-modules/IM-0100/BlockDiagram.svg" width="300">
 </p>
 
 The above diagram shows the block diagram of the interface module. At the top, we have 3 connectors:
@@ -53,7 +57,7 @@ Each camera has it's own 2-lane MIPI channel.
 ## Connections
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/6-channel-mipi/6%20Channel%20MIPI%20interface%20connector%20layout.svg" width="300">
+<img src="/assets/images/pages/interface-modules/IM-0100/6%20Channel%20MIPI%20interface%20connector%20layout.svg" width="300">
 </p>
 
 ### CAM 0 to CAM 5 port 
