IM becomes IB en CM becomes CB

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CM-0010
+title: CB-0010
 parent: Comm Modules
 nav_order: 2
 has_children: true
@@ -14,7 +14,7 @@ has_toc: false
 ---
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CM-0010/CM-0010%20Render.png" width="150">
+<img src="/assets/images/pages/communication-modules/CB-0010/CB-0010%20Render.png" width="150">
 </p>
 
 ## Description
@@ -25,7 +25,7 @@ The module has an standard RJ45 connector with status leds.
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CM-0010/CM-0010%20Blockdiagram.svg" width="300">
+<img src="/assets/images/pages/communication-modules/CB-0010/CB-0010%20Blockdiagram.svg" width="300">
 </p>
 
 The above diagram shows the block diagram of the communication module.
@@ -38,7 +38,7 @@ There are also 2 status LEDs available:
 ## Connections
 
 <p align="center">
-<img src="/assets/images/pages/communication-modules/CM-0010/CM-0010%20Connections.svg" width="300">
+<img src="/assets/images/pages/communication-modules/CB-0010/CB-0010%20Connections.svg" width="300">
 </p>
 
 ### P1 port
