--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IM-0100
+title: IB-0100
 parent: Interface Modules
 nav_order: 2
 has_children: true
@@ -14,7 +14,7 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0100/IM-0100%20Render.png" width="150">
+<img src="/assets/images/pages/interface-modules/IB-0100/IB-0100%20Render.png" width="150">
 </p>
 
 ## Description
@@ -38,7 +38,7 @@ If you need an other camera, please contact us at [support](mailto:support@ai-bl
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0100/BlockDiagram.svg" width="300">
+<img src="/assets/images/pages/interface-modules/IB-0100/IB-0100%20BlockDiagram.svg" width="300">
 </p>
 
 The above diagram shows the block diagram of the interface module. At the top, we have 3 connectors:
@@ -57,7 +57,7 @@ Each camera has it's own 2-lane MIPI channel.
 ## Connections
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0100/6%20Channel%20MIPI%20interface%20connector%20layout.svg" width="300">
+<img src="/assets/images/pages/interface-modules/IB-0100/IB-0100%20Connections.svg" width="300">
 </p>
 
 ### CAM 0 to CAM 5 port 
