--- a/pages/interface-modules/IB-0200.md
+++ b/pages/interface-modules/IB-0200.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IM-0200 
+title: IB-0200 
 parent: Interface Modules
 nav_order: 3
 has_children: true
@@ -14,7 +14,7 @@ An interface module for interfacing up to 4 USB3.0 cameras and with digital I/O 
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0200/IM-0200%20Render.png" width="150">
+<img src="/assets/images/pages/interface-modules/IB-0200/IB-0200%20Render.png" width="150">
 </p>
 
 ## Description
@@ -35,7 +35,7 @@ Those I/O can used to interface with a remote system such as a PLC system.
 ## Block diagram
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0200/IM-0200%20Blockdiagram.svg" width="300">
+<img src="/assets/images/pages/interface-modules/IB-0200/IB-0200%20Blockdiagram.svg" width="300">
 </p>
 
 The above diagram shows the block diagram of the interface module. There are 3 main parts:
@@ -52,7 +52,7 @@ This allows you to use 2 different power supplies: one for the MODULE-X (24VDC) 
 ## Connections
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IM-0200/IM-0200%20Connectios.svg" width="200">
+<img src="/assets/images/pages/interface-modules/IB-0200/IB-0200%20Connections.svg" width="200">
 </p>
 
 ### P1 to P4 port
