Add IB-1200 module and change MODULE-X to BLOX

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -19,7 +19,7 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 
 ## Description
 
-The IM-0100 allows you to connect up to 6 MIPI cameras to the MODULE-X device. 
+The IM-0100 allows you to connect up to 6 MIPI cameras to the BLOX device. 
 The maximum number of cameras depends on the Jetson Module. 
 For the Jetson Nano, you can only connect up to 3 cameras. 
 For the Jetson TX2 NX and the Jetson Xavier NX, you can connect up to 6 cameras.
@@ -31,7 +31,7 @@ The recovery button is also available on the module.
 
 ## Camera support
 
-Currently the module supports the IMX219 camera, [here](/pages/interface-modules/6-channel-mipi/imx219.html) you can find out how you can use the camera on the MODULE-X platform.
+Currently the module supports the IMX219 camera, [here](/pages/interface-modules/6-channel-mipi/imx219.html) you can find out how you can use the camera on the BLOX platform.
 
 If you need an other camera, please contact us at [support](mailto:support@ai-blox.com?subject=[Docs]%20Camera%20driver%20request) and we are happy check if we can provide a driver.
 
@@ -42,11 +42,11 @@ If you need an other camera, please contact us at [support](mailto:support@ai-bl
 </p>
 
 The above diagram shows the block diagram of the interface module. At the top, we have 3 connectors:
-* Power connector for powering the MODULE-X device
+* Power connector for powering the BLOX device
 * Serial connector for connecting the boot terminal 
-* USB connector for flashing the MODULE-X device
+* USB connector for flashing the BLOX device
 
-There is an button on the module, which allows you to place the MODULE-X in recovery mode.
+There is an button on the module, which allows you to place the BLOX in recovery mode.
 When the device is in recovery mode, you can flash the Jetson module through the USB.
 
 There are in total 6 FPC connectors for connecting the cameras. 
