--- a/pages/interface-modules/IB-0200.md
+++ b/pages/interface-modules/IB-0200.md
@@ -29,7 +29,7 @@ The module has 4 USB3.0 standard-A ports and has an internal USB3.0 hub controll
 This allows you to stream up to 4 cameras in high resolution and a high frame rate. All ports are backwards compatible with USB2.0.
 
 The module has also 4 Digital Outputs (DO) and 4 Digital Inputs (DI).
-Both are 24VDC compatible and are optical isolated from the MODULE-X device.
+Both are 24VDC compatible and are optical isolated from the BLOX device.
 Those I/O can used to interface with a remote system such as a PLC system.
 
 ## Block diagram
@@ -43,11 +43,11 @@ The above diagram shows the block diagram of the interface module. There are 3 m
 * Digital Output circuits
 * Digital Input circuits
 
-The USB3.0 Hub is connected to the MODULE-X USB3.0 port. 
-This way, the MODULE-X USB3.0 port is extended with 4 USB3.0 ports P1...P4.
+The USB3.0 Hub is connected to the BLOX USB3.0 port. 
+This way, the BLOX USB3.0 port is extended with 4 USB3.0 ports P1...P4.
 
-The digital outputs and inputs are galvanic isolated from the MODULE-X. 
-This allows you to use 2 different power supplies: one for the MODULE-X (24VDC) and the other for the I/O (24VDC I/O).
+The digital outputs and inputs are galvanic isolated from the BLOX. 
+This allows you to use 2 different power supplies: one for the BLOX (24VDC) and the other for the I/O (24VDC I/O).
 
 ## Connections
 
@@ -78,8 +78,8 @@ The Px are the USB3.0 ports and compatible with the USB3.0 standard-A.
 
 | Description               | Pin Name | Pin# | Pin# | Pin Name  | Description               |
 |--------------------------:|:--------:|:----:|:----:|:---------:|:--------------------------|
-| I/O Power Supply +        | 24V I/O  | 1    | 20   | 24V       | MODULE-X Power Supply +   |
-| I/O Power Supply -        | 0V I/O   | 2    | 19   | 0V        | MODULE-X Power Supply -   |
+| I/O Power Supply +        | 24V I/O  | 1    | 20   | 24V       | BLOX Power Supply +   |
+| I/O Power Supply -        | 0V I/O   | 2    | 19   | 0V        | BLOX Power Supply -   |
 | Output Channel 1          | OUT 1    | 3    | 18   | IN 1      | Input Channel 1           |
 | I/O Ground                | 0V I/O   | 4    | 17   | 0V_I/O    | I/O Ground                |
 | Output Channel 2          | OUT 2    | 5    | 16   | IN 2      | Input Channel 2           |
