--- a/pages/interface-modules/IB-1200.md
+++ b/pages/interface-modules/IB-1200.md
@@ -14,7 +14,7 @@ An interface module for interfacing up to 4 USB3.0 cameras and with digital I/O 
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IB-1200/IB-1200%20Render.png" width="150">
+<img src="/assets/images/pages/interface-modules/IB-1200/IB-1200%20render.png" width="150">
 </p>
 
 ## Description
@@ -52,7 +52,7 @@ This allows you to use 2 different power supplies: one for the MODULE-X (24VDC) 
 ## Connections
 
 <p align="center">
-<img src="/assets/images/pages/interface-modules/IB-1200/IB-1200%20Connections.svg" width="200">
+<img src="/assets/images/pages/interface-modules/IB-1200/IB-1200%20connections.svg" width="200">
 </p>
 
 ### P1 to P4 port
