rename things and made changes

--- a/pages/interface-blox/IB-0100.md
+++ b/pages/interface-blox/IB-0100.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: IB-0100
-parent: Interface Modules
+parent: Interface Blox
 nav_order: 2
 has_children: true
 has_toc: false
