--- a/pages/interface-blox/IB-1200.md
+++ b/pages/interface-blox/IB-1200.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: IB-1200 
-parent: Interface Modules
+parent: Interface Blox
 nav_order: 4
 has_children: true
 has_toc: false
