rename things and made changes

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: IB-0100
-parent: Interface Blox
+parent: Interface Modules
 nav_order: 2
-has_children: true
+has_children: false
 has_toc: false
 ---
 
@@ -31,7 +31,7 @@ The recovery button is also available on the module.
 
 ## Camera support
 
-Currently the module supports the IMX219 camera, [here](/pages/interface-blox/6-channel-mipi/imx219.html) you can find out how you can use the camera on the BLOX platform.
+Currently the module supports the IMX219 camera, [here](/pages/interface-modules/6-channel-mipi/imx219.html) you can find out how you can use the camera on the BLOX platform.
 
 If you need an other camera, please contact us at [support](mailto:support@ai-blox.com?subject=[Docs]%20Camera%20driver%20request) and we are happy check if we can provide a driver.
 
