--- a/pages/interface-modules/IB-0200.md
+++ b/pages/interface-modules/IB-0200.md
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: IB-0200 
-parent: Interface Blox
+parent: Interface Modules
 nav_order: 3
-has_children: true
+has_children: false
 has_toc: false
 ---
 
