--- a/pages/interface-modules/IB-1200.md
+++ b/pages/interface-modules/IB-1200.md
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: IB-1200 
-parent: Interface Blox
+parent: Interface Modules
 nav_order: 4
-has_children: true
+has_children: false
 has_toc: false
 ---
 
