--- a/pages/interface-modules/IB-0200.md
+++ b/pages/interface-modules/IB-0200.md
@@ -78,15 +78,65 @@ The Px are the USB3.0 ports and compatible with the USB3.0 standard-A.
 
 | Description               | Pin Name | Pin# | Pin# | Pin Name  | Description               |
 |--------------------------:|:--------:|:----:|:----:|:---------:|:--------------------------|
-| I/O Power Supply +        | 24V I/O  | 1    | 20   | 24V       | BLOX Power Supply +   |
-| I/O Power Supply -        | 0V I/O   | 2    | 19   | 0V        | BLOX Power Supply -   |
+| I/O Power Supply +        | 24V I/O  | 1    | 20   | 24V I/O   | I/O Power Supply +        |
+| I/O Power Supply -        | 0V I/O   | 2    | 19   | 0V I/O    | I/O Power Supply -        |
 | Output Channel 1          | OUT 1    | 3    | 18   | IN 1      | Input Channel 1           |
-| I/O Ground                | 0V I/O   | 4    | 17   | 0V_I/O    | I/O Ground                |
+| I/O +24V                  | 24V I/O  | 4    | 17   | 24V_I/O   | I/O +24V                  |
 | Output Channel 2          | OUT 2    | 5    | 16   | IN 2      | Input Channel 2           |
-| I/O Ground                | 0V I/O   | 6    | 15   | 0V_I/O    | I/O Ground                |
+| I/O +24V                  | 24V I/O  | 6    | 15   | 24V_I/O   | I/O +24V                  |
 | Output Channel 3          | OUT 3    | 7    | 14   | IN 3      | Input Channel 3           |
-| I/O Ground                | 0V I/O   | 8    | 13   | 0V_I/O    | I/O Ground                |
+| I/O +24V                  | 24V I/O  | 8    | 13   | 24V_I/O   | I/O +24V                  |
 | Output Channel 4          | OUT 4    | 9    | 12   | IN 4      | Input Channel 4           |
-| I/O Ground                | 0V I/O   | 10   | 11   | 0V_I/O    | I/O Ground                |
+| I/O +24V                  | 24V I/O  | 10   | 11   | 24V_I/O   | I/O +24V                  |
 
 
+### Accessing I/O Ports
+
+We are developing a python library for accessing the I/O Ports, however this library is not yet available.
+For now, you can access the I/O Ports through the file system with the commands below.
+
+#### For MX1030-x (Xavier NX)
+
+* The table below shows the relationship between the GPIO numbers and the DI/DO ports. You need those GPIO numbers to access the ports:
+
+| Port | GPIO # |
+|:----:|:------:|
+| DO1  | 417    |
+| DO2  | 420    |
+| DO3  | 418    |
+| DO4  | 424    |
+| DI1  | 421    |
+| DI2  | 419    |
+| DI3  | 264    |
+| DI4  | 265    |
+
+* First we need to make the GPIO pins available to the fs:
+  
+      $ sudo echo 417 > /sys/class/gpio/export
+      $ sudo echo 420 > /sys/class/gpio/export
+      $ sudo echo 418 > /sys/class/gpio/export
+      $ sudo echo 424 > /sys/class/gpio/export
+      $ sudo echo 421 > /sys/class/gpio/export
+      $ sudo echo 419 > /sys/class/gpio/export
+      $ sudo echo 264 > /sys/class/gpio/export
+      $ sudo echo 265 > /sys/class/gpio/export
+
+* Second, we need to configure the port direction correctly:
+
+      $ echo out > /sys/class/gpio/gpio417/direction
+      $ echo out > /sys/class/gpio/gpio420/direction
+      $ echo out > /sys/class/gpio/gpio418/direction
+      $ echo out > /sys/class/gpio/gpio424/direction
+      $ echo in > /sys/class/gpio/gpio421/direction
+      $ echo in > /sys/class/gpio/gpio419/direction
+      $ echo in > /sys/class/gpio/gpio264/direction
+      $ echo in > /sys/class/gpio/gpio265/direction
+
+* Finally, you can control the I/O ports through the value property:
+
+      # For DI1
+      $ cat /sys/class/gpio/gpio421/value
+      0
+  
+      # For DO1
+      $ echo 1 > /sys/class/gpio417/value
