Add CB-0011 module

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -9,7 +9,7 @@ has_toc: false
 
 # Gigabit ethernet communication module
 
-100Mbs/1Gbps Ethernet communication module for MODULE-X platform
+100Mbs/1Gbps Ethernet communication module for BLOX platform
 
 ---
 
