fix AP482 table

--- a/pages/comm-modules/acropack/CB-0011-AP482.md
+++ b/pages/comm-modules/acropack/CB-0011-AP482.md
@@ -149,40 +149,40 @@ This will start the demo program which allows you to configure the module. Pleas
 
 ## I/O connections
 
-| P2 Connector || AcroPack Module || P2 Connector       ||
-| Description  | Pin# | Pin# | Pin# | Pin# | Description  |
-|-------------:|:----:|:----:|:----:|:----:|:-------------|
-| Out3         | 1    | 69   | 1    | 35   | In1 A        |
-| Out2         | 2    | 70   | 2    | 36   | In0 A        |
-| Out5         | 3    | 73   | 5    | 37   | In3 A        |
-| Out4         | 4    | 74   | 6    | 38   | In2 A        |
-| Out7         | 5    | 77   | 9    | 39   | In5 A        |
-| Out6         | 6    | 78   | 10   | 40   | In4 A        |
-| Out9         | 7    | 81   | 13   | 41   | In7 A        |
-| Out8         | 8    | 82   | 14   | 42   | In6 A        |
-| Dout1        | 9    | 85   | 17   | 43   | In9 A        |
-| Dout0        | 10   | 86   | 18   | 44   | In8 A        |
-| DOut3        | 11   | 89   | 21   | 45   | In1 B        |
-| Dout2        | 12   | 90   | 22   | 46   | In0 B        |
-| Dout5        | 13   | 93   | 25   | 47   | In3 B        |
-| Dout4        | 14   | 94   | 26   | 48   | In2 B        |
-| GND          | 15   | 97   | 29   | 49   | In5 B        |
-| Ext. Clock   | 16   | 98   | 30   | 50   | In4 B        |
-| GROUND       | 17   |      | 33   | 51   | In7 B        |
-| GROUND       | 18   |      | 34   | 52   | In6 B        |
-| GROUND       | 19   |      | 37   | 53   | In9 B        |
-| GROUND       | 20   |      | 38   | 54   | In8 B        |
-| GROUND       | 21   |      | 41   | 55   | In1 C        |
-| GROUND       | 22   |      | 42   | 56   | In0 C        |
-| GROUND       | 23   |      | 45   | 57   | In3 C        |
-| GROUND       | 24   |      | 46   | 58   | In2 C        |
-| GROUND       | 25   |      | 49   | 59   | In5 C        |
-| GROUND       | 26   |      | 50   | 60   | In4 C        |
-| GROUND       | 27   |      | 53   | 61   | In7 C        |
-| GROUND       | 28   |      | 54   | 62   | In6 C        |
-| GROUND       | 29   |      | 57   | 63   | In9 C        |
-| GROUND       | 30   |      | 58   | 64   | In8 C        |
-| GROUND       | 31   |      | 61   | 65   | Din1         |
-| GROUND       | 32   |      | 62   | 66   | Din0         |
-| GROUND       | 33   |      | 65   | 67   | Out1         |
-| GROUND       | 34   |      | 66   | 68   | Out0         |
+|: P2 Connector :||: AcroPack Module :||: P2 Connector     :||
+| Description     | Pin# | Pin# | Pin# | Pin# | Description  |
+|----------------:|:----:|:----:|:----:|:----:|:-------------|
+| Out3            | 1    | 69   | 1    | 35   | In1 A        |
+| Out2            | 2    | 70   | 2    | 36   | In0 A        |
+| Out5            | 3    | 73   | 5    | 37   | In3 A        |
+| Out4            | 4    | 74   | 6    | 38   | In2 A        |
+| Out7            | 5    | 77   | 9    | 39   | In5 A        |
+| Out6            | 6    | 78   | 10   | 40   | In4 A        |
+| Out9            | 7    | 81   | 13   | 41   | In7 A        |
+| Out8            | 8    | 82   | 14   | 42   | In6 A        |
+| Dout1           | 9    | 85   | 17   | 43   | In9 A        |
+| Dout0           | 10   | 86   | 18   | 44   | In8 A        |
+| DOut3           | 11   | 89   | 21   | 45   | In1 B        |
+| Dout2           | 12   | 90   | 22   | 46   | In0 B        |
+| Dout5           | 13   | 93   | 25   | 47   | In3 B        |
+| Dout4           | 14   | 94   | 26   | 48   | In2 B        |
+| GND             | 15   | 97   | 29   | 49   | In5 B        |
+| Ext. Clock      | 16   | 98   | 30   | 50   | In4 B        |
+| GROUND          | 17   |      | 33   | 51   | In7 B        |
+| GROUND          | 18   |      | 34   | 52   | In6 B        |
+| GROUND          | 19   |      | 37   | 53   | In9 B        |
+| GROUND          | 20   |      | 38   | 54   | In8 B        |
+| GROUND          | 21   |      | 41   | 55   | In1 C        |
+| GROUND          | 22   |      | 42   | 56   | In0 C        |
+| GROUND          | 23   |      | 45   | 57   | In3 C        |
+| GROUND          | 24   |      | 46   | 58   | In2 C        |
+| GROUND          | 25   |      | 49   | 59   | In5 C        |
+| GROUND          | 26   |      | 50   | 60   | In4 C        |
+| GROUND          | 27   |      | 53   | 61   | In7 C        |
+| GROUND          | 28   |      | 54   | 62   | In6 C        |
+| GROUND          | 29   |      | 57   | 63   | In9 C        |
+| GROUND          | 30   |      | 58   | 64   | In8 C        |
+| GROUND          | 31   |      | 61   | 65   | Din1         |
+| GROUND          | 32   |      | 62   | 66   | Din0         |
+| GROUND          | 33   |      | 65   | 67   | Out1         |
+| GROUND          | 34   |      | 66   | 68   | Out0         |
