fix table issues

--- a/pages/comm-modules/CB-0011.md
+++ b/pages/comm-modules/CB-0011.md
@@ -28,7 +28,7 @@ The table below shows an overview of all available AcroPack modules.
 
 | Model    | Order Code       | Description                                           |
 |:--------:|:----------------:|:------------------------------------------------------|
-|: **Analog I/O Modules**                                                           |||                                               
+|: **Analog I/O Modules**                                                          :|||                                               
 | AP220    | CB-0011-AP220    | 12-Bit DAC Module                                     |
 | AP225    | CB-0011-AP225    | 12-Bit DAC Waveform Output Module                     |
 | AP226    | CB-0011-AP226    | 12-Bit DAC Module                                     |
@@ -38,16 +38,16 @@ The table below shows an overview of all available AcroPack modules.
 | AP323    | CB-0011-AP323    | 16-Bit ADC High Density Analog Input Module           |
 | AP341    | CB-0011-AP341    | 14-Bit High Density ADC Module                        |
 | AP342    | CB-0011-AP342    | 14-Bit High Density Isolated ADC Module               |
-|: **Digital I/O Modules**                                                          |||
+|: **Digital I/O Modules**                                                         :|||
 | AP408    | CB-0011-AP408    | 32 Ch High Voltage Digital Input/Output Module        |
 | AP418    | CB-0011-AP418    | 16 Ch High Voltage Digital Input/Output Module        |
 | AP441    | CB-0011-AP441    | 32 Ch Isolated Digital Input with Interrupts Module   |
 | AP445    | CB-0011-AP445    | 32 Ch Solid-State Isolated Digital Output Module      |
 | AP471    | CB-0011-AP471    | 48 Ch TTL Level Digital I/O                           |
-|: **FPGA I/O Modules**                                                             |||
+|: **FPGA I/O Modules**                                                            :|||
 | APA7-500 | CB-0011-APA7-500 | Reconfigurable Xilinx® Artix®-7 FPGA Module           |
 | APZU     | CB-0011-APZU     | User-Configurable Zynq® UltraScale+ MPSoC I/O Modules | 
-|: **Communication Modules**                                                        |||
+|: **Communication Modules**                                                       :|||
 | AP500    | CB-0011-AP500    | Quad Serial RS232 Communication Module                |
 | AP512    | CB-0011-AP512    | Quad Isolated Serial RS422b/485 Communication Module  |
 | AP513    | CB-0011-AP513    | Quad Isolated Serial RS232 Communication Module       |
@@ -56,11 +56,11 @@ The table below shows an overview of all available AcroPack modules.
 | AP560A   | CB-0011-AP560A   | Isolated CAN Bus Interface Module                     |
 | AP570    | CB-0011-AP570    | MIL-STD-1553 Communication Module                     |
 | AP580    | CB-0011-AP580    | 1Gb Ethernet with Optional Power over Ethernet Module |
-|: **Counter/Timer Modules**                                                        |||
+|: **Counter/Timer Modules**                                                       :|||
 | AP482    | CB-0011-AP482    | Ten 32-Bit Counter / Timer Module                     |
 | AP483    | CB-0011-AP482    | Eight 32-Bit Counter / Timer Module                   |
 | AP484    | CB-0011-AP482    | Six 32-Bit Counter / Timer Module                     |
-|: **Multi-function I/O**                                                           |||
+|: **Multi-function I/O**                                                          :|||
 | AP730    | CB-011-AP730     | Multi-function I/O                                    |
 
 
