add CB-0210 and fix some things on CB-0010

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -19,7 +19,7 @@ has_toc: false
 
 ## Description
 
-The CM-0010 allows you to connect the MODULE-X to an 100Mbps/1Gbps ethernet network.
+The CB-0010 allows you to connect the BLOX to an 100Mbps/1Gbps ethernet network.
 The module has an standard RJ45 connector with status leds. 
 
 ## Block diagram
@@ -44,7 +44,6 @@ There are also 2 status LEDs available:
 ### P1 port
 
 The P1 port is a standard RJ45 socket 
-
 
 | Pin# | Pin Name  | Description               |
 |:-----|:----------|:--------------------------|
