add CB-0200, CB-0210 and how to guide

--- a/pages/comm-modules/acropack/CB-0011-AP482.md
+++ b/pages/comm-modules/acropack/CB-0011-AP482.md
@@ -22,9 +22,9 @@ First of all, you need to download the latest version of the APSW-API-LNX from t
 Go to the directory where you unpacked the SDK and copy the files to the BLOX with following command:
 
 ```shell
- $ sftp ai-blox@192.168.1.143
- ai-blox@192.168.1.143 password: ****
- connected to 192.168.1.143
+ $ sftp ai-blox@192.168.ht-install-a-sim-card.143
+ ai-blox@192.168.ht-install-a-sim-card.143 password: ****
+ connected to 192.168.ht-install-a-sim-card.143
  sftp> put -r 9500491D_SW
 ```
 
@@ -35,8 +35,8 @@ Where 192.168.1.143 is the IP address of the BLOX and 9500491D_SW is the unpacke
 Next you need to login the blox and verify if the AcroPack module is recognized: 
 
 ````shell
- $ ssh ai-blox@192.168.1.143
- ai-blox@192.168.1.143 password: **** 
+ $ ssh ai-blox@192.168.ht-install-a-sim-card.143
+ ai-blox@192.168.ht-install-a-sim-card.143 password: **** 
  ai-blox@ubuntu:~$ lspci
  0004:00:00.0 PCI bridge: NVIDIA Corporation Device 1ad1 (rev a1)
  0005:00:00.0 PCI bridge: NVIDIA Corporation Device 1ad0 (rev a1)
