--- a/pages/comm-modules/CB-0210.md
+++ b/pages/comm-modules/CB-0210.md
@@ -2,7 +2,7 @@
 layout: default
 title: CB-0210
 parent: Comm Modules
-nav_order: 2
+nav_order: 6
 has_children: true
 has_toc: false
 ---
@@ -21,7 +21,9 @@ has_toc: false
 
 The CB-0210 is a modular communication module for the BLOX platform and adds a 100Mbps/1Gbps ethernet port and a LTE Cat. 4 modem to the BLOX module.
 
-This makes the module ideal for projects where you need a LTE modem in combination with a gigabit ethernet network.
+This makes the module ideal for projects where you need cellular communication in combination with a gigabit ethernet network.
+
+This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/ht-install-a-sim-card.html) to install the SIM card.
 
 ## Block diagram
 
@@ -35,6 +37,9 @@ The module has one RJ45 socket with build-in magnetics.
 There are also 2 status LEDs available:
 * Link status - Green LED
 * Activity status - Orange LED
+
+The module has also an internal mPCIe modem which connect to the BLOX. On the field side, there are 3 SMA connectors for connecting the antennas.
+
 
 ## Connections
 
