rename how-to page

--- a/pages/comm-modules/CB-0200.md
+++ b/pages/comm-modules/CB-0200.md
@@ -23,7 +23,7 @@ The CB-0200 is a modular communication module for the BLOX platform and a LTE Ca
 
 This makes the module ideal for projects where you need cellular communication.
 
-This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/ht-install-a-sim-card.html) to install the SIM card.
+This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/how-to-1.html) to install the SIM card.
 
 ## Block diagram
 
