--- a/pages/comm-modules/CB-0210.md
+++ b/pages/comm-modules/CB-0210.md
@@ -23,7 +23,7 @@ The CB-0210 is a modular communication module for the BLOX platform and adds a 1
 
 This makes the module ideal for projects where you need cellular communication in combination with a gigabit ethernet network.
 
-This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/ht-install-a-sim-card.html) to install the SIM card.
+This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/how-to-1.html) to install the SIM card.
 
 ## Block diagram
 
