Change IB-0100 image

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -14,7 +14,7 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100%20Render.png" width="150">
+<img src="/assets/images/pages/interface-blox/IB-0100/IB-0100@0.25x.png" width="150">
 </p>
 
 ## Description
@@ -24,10 +24,7 @@ The maximum number of cameras depends on the Jetson Module.
 For the Jetson Nano, you can only connect up to 3 cameras. 
 For the Jetson TX2 NX and the Jetson Xavier NX, you can connect up to 6 cameras.
 
-The module has also a debug interface which makes the module ideal as a development module for your application. 
-The debug interface consist out of an USB connection to flash the module and a serial port which allows you to monitor the boot terminal output.
-To flash the module, you need to press the recovery button while turning the power on. 
-The recovery button is also available on the module.
+The module has also a USB3.0 port. This port can be used to connect external USB devices like a SSD drive or keyboard/mouser.
 
 ## Camera support
 
