--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -19,7 +19,7 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 
 ## Description
 
-The IM-0100 allows you to connect up to 6 MIPI cameras to the BLOX device. 
+The IB-0100 allows you to connect up to 6 MIPI cameras to the BLOX device. 
 The maximum number of cameras depends on the Jetson Module. 
 For the Jetson Nano, you can only connect up to 3 cameras. 
 For the Jetson TX2 NX and the Jetson Xavier NX, you can connect up to 6 cameras.
