minor grammar and style changes to description

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -20,11 +20,12 @@ The 6-Channel MIPI interface module allows you to connect up to 6 MIPI cameras.
 ## Description
 
 The IB-0100 allows you to connect up to 6 MIPI cameras to the BLOX device. 
-The maximum number of cameras depends on the Jetson Module. 
-For the Jetson Nano, you can only connect up to 3 cameras. 
-For the Jetson TX2 NX and the Jetson Xavier NX, you can connect up to 6 cameras.
 
-The module has also a USB3.0 port. This port can be used to connect external USB devices like a SSD drive or keyboard/mouser.
+The maximum number of cameras depends on the Jetson Module: 
+* Jetson Nano: up to 3 cameras
+* Jetson TX2 NX and the Jetson Xavier NX: up to 6 cameras
+
+The module has also a USB3.0 port to connect external USB devices like an SSD drive or keyboard/mouser.
 
 ## Camera support
 
