New IB-2010 page & deleted I/O section on IB-0200

--- a/pages/interface-modules/IB-0100.md
+++ b/pages/interface-modules/IB-0100.md
@@ -25,7 +25,7 @@ The maximum number of cameras depends on the Jetson Module:
 * Jetson Nano: up to 3 cameras
 * Jetson TX2 NX and the Jetson Xavier NX: up to 6 cameras
 
-The module has also a USB3.0 port to connect external USB devices like an SSD drive or keyboard/mouser.
+The module has also a USB3.0 port to connect external USB devices like an SSD drive or keyboard/mouse.
 
 ## Camera support
 
