add RJ45 description pinout

--- a/pages/comm-modules/CB-0010.md
+++ b/pages/comm-modules/CB-0010.md
@@ -47,11 +47,11 @@ The P1 port is a standard RJ45 socket
 
 | Pin# | Pin Name  | Description               |
 |:-----|:----------|:--------------------------|
-| 1    | TxRx A +  |                           |
-| 2    | TxRx A -  |                           |
-| 3    | TxRx B +  |                           |
-| 4    | TxRx C +  |                           |
-| 5    | TxRx C -  |                           |
-| 6    | TxRx B -  |                           |
-| 7    | TxRx D +  |                           |
-| 8    | TxRx D -  |                           |
+| 1    | TxRx A +  | Bi-directional pair A +   |
+| 2    | TxRx A -  | Bi-directional pair A -   |
+| 3    | TxRx B +  | Bi-directional pair B +   |
+| 4    | TxRx C +  | Bi-directional pair C +   |
+| 5    | TxRx C -  | Bi-directional pair C -   |
+| 6    | TxRx B -  | Bi-directional pair B -   |
+| 7    | TxRx D +  | Bi-directional pair D +   |
+| 8    | TxRx D -  | Bi-directional pair D -   |
