minor style and grammar changes

--- a/pages/comm-modules/CB-0011.md
+++ b/pages/comm-modules/CB-0011.md
@@ -19,7 +19,7 @@ has_toc: false
 
 ## Description
 
-The CM-0011 allows you to connect the BLOX to an 100Mbps/1Gbps ethernet network.
+The CB-0011 allows you to connect the BLOX to a 100Mbps/1Gbps ethernet network.
 The module has an standard RJ45 connector with status leds.
 
 The module also has an [AcroPack](https://www.acromag.com/product-category/embedded-i-o-processing-solutions/acropack-mini-pci-express-based-interface-i-o-boards/) interface. This allows you to add any of the AcroPack modules sold by [AcroMag](https://www.acromag.com).
@@ -91,14 +91,14 @@ The P1 port is a standard RJ45 socket
 
 | Pin# | Pin Name  | Description               |
 |:-----|:----------|:--------------------------|
-| 1    | TxRx A +  |                           |
-| 2    | TxRx A -  |                           |
-| 3    | TxRx B +  |                           |
-| 4    | TxRx C +  |                           |
-| 5    | TxRx C -  |                           |
-| 6    | TxRx B -  |                           |
-| 7    | TxRx D +  |                           |
-| 8    | TxRx D -  |                           |
+| 1    | TxRx A +  | Bi-directional pair A +   |
+| 2    | TxRx A -  | Bi-directional pair A -   |
+| 3    | TxRx B +  | Bi-directional pair B +   |
+| 4    | TxRx C +  | Bi-directional pair C +   |
+| 5    | TxRx C -  | Bi-directional pair C -   |
+| 6    | TxRx B -  | Bi-directional pair B -   |
+| 7    | TxRx D +  | Bi-directional pair D +   |
+| 8    | TxRx D -  | Bi-directional pair D -   |
 
 ### P2 Port
 
@@ -110,8 +110,8 @@ There are 2 backshells available:
 - [5749195-2](https://www.te.com/usa-en/product-5749195-2.html) has an 180° (straight) cable exit
 - [5749204-2](https://www.te.com/usa-en/product-5749204-2.html) has an 75° cable exit
 
-The table belows shows the general pin-out for the P2 port. Depending of the installed AcroPack module, this pin-out will be differend.
-Check therefore the AcroPack module page on the left side. If the module page isn't available, please [contact us](mailto:support@ai-blox.com?subject=[AcroPack module information request]).
+The table belows shows the general pin-out for the P2 port. Depending on the installed AcroPack module, this pin-out will be different.
+For pin-out and installation instruction check the AcroPack module sub-page under CB-011 in the left side index menu. If the module sub-page isn't available yet, please [contact us](mailto:support@ai-blox.com?subject=[AcroPack module information request]).
 
 |: P2 Connector     :|| AcroPack Module ||: P2 Connector      :||
 | Description  | Pin# | Pin# | Pin# | Pin# | Description  |
