minor grammer & style changes

--- a/pages/comm-modules/CB-0200.md
+++ b/pages/comm-modules/CB-0200.md
@@ -19,9 +19,7 @@ LTE Cat. 4 cellular modem for BLOX platform
 
 ## Description
 
-The CB-0200 is a modular communication module for the BLOX platform and a LTE Cat. 4 modem to the BLOX module.
-
-This makes the module ideal for projects where you need cellular communication.
+The CB-0200 module adds cellular connectivity to the BLOX platform with the integrated LTE Cat.4 modem.
 
 This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/how-to-1.html) to install the SIM card.
 
@@ -31,8 +29,8 @@ This module needs a SIM card, follow the [how to install the SIM card](/pages/ho
 <img src="/assets/images/pages/communication-modules/CB-0200/CB-0200%20Blockdiagram.svg" width="300">
 </p>
 
-The above diagram shows the block diagram of the communication module.
-The module has an internal mPCIe modem which connect to the BLOX. On the field side, there are 3 SMA connectors for connecting the antennas.
+Above is the block diagram of the communication module.
+The module has an internal mPCIe modem which connect to the BLOX. On the outside, there are 3 SMA connectors for the antennas.
 
 
 ## Connections
@@ -43,12 +41,12 @@ The module has an internal mPCIe modem which connect to the BLOX. On the field s
 
 ### P1 Port
 
-The P1 port is used to connect the main LTE antenna. It's a SMA connector.
+The P1 port SMA connector is used for the main LTE antenna.
 
 ### P2 Port
 
-The P2 port is used to connect the GNSS antenna. It's a SMA connector.
+The P2 port SMA connector is used for the GNSS antenna.
 
 ### P3 Port
 
-The P3 port is used to connect the auxiliary LTE antenna. Its' a SMA connector.
+The P3 port SMA is used for the auxiliary LTE antenna.
