forgot connector word

--- a/pages/comm-modules/CB-0200.md
+++ b/pages/comm-modules/CB-0200.md
@@ -49,4 +49,4 @@ The P2 port SMA connector is used for the GNSS antenna.
 
 ### P3 Port
 
-The P3 port SMA is used for the auxiliary LTE antenna.
+The P3 port SMA connector is used for the auxiliary LTE antenna.
