minor style and grammar changes

--- a/pages/comm-modules/CB-0210.md
+++ b/pages/comm-modules/CB-0210.md
@@ -9,7 +9,7 @@ has_toc: false
 
 # Gigabit ethernet + LTE Cat. 4 cellular communication module
 
-100Mbs/1Gbps Ethernet communication module with a LTE Cat. 4 cellular modem for BLOX platform
+100Mbs/1Gbps Ethernet module with a LTE Cat. 4 cellular modem for BLOX platform
 
 ---
 
@@ -19,9 +19,7 @@ has_toc: false
 
 ## Description
 
-The CB-0210 is a modular communication module for the BLOX platform and adds a 100Mbps/1Gbps ethernet port and a LTE Cat. 4 modem to the BLOX module.
-
-This makes the module ideal for projects where you need cellular communication in combination with a gigabit ethernet network.
+The CB-0210 module adds both cellular connectivity and gigabit ethernet to the BLOX platform with the combination of a 100Mbps/1Gbps ethernet port and an LTE Cat. 4 modem. It makes the module ideal for projects where cellular communication and gigabit ethernet network are required. 
 
 This module needs a SIM card, follow the [how to install the SIM card](/pages/how-to/how-to-1.html) to install the SIM card.
 
@@ -31,14 +29,14 @@ This module needs a SIM card, follow the [how to install the SIM card](/pages/ho
 <img src="/assets/images/pages/communication-modules/CB-0210/CB-0210%20Blockdiagram.svg" width="300">
 </p>
 
-The above diagram shows the block diagram of the communication module.
+Above is the block diagram of the communication module.
 The module has one RJ45 socket with build-in magnetics.
 
 There are also 2 status LEDs available:
 * Link status - Green LED
 * Activity status - Orange LED
 
-The module has also an internal mPCIe modem which connect to the BLOX. On the field side, there are 3 SMA connectors for connecting the antennas.
+The module has also an internal mPCIe modem which connect to the BLOX. On the field side, there are 3 SMA connectors for the antennas.
 
 
 ## Connections
@@ -54,23 +52,23 @@ The P1 port is a standard RJ45 socket
 
 | Pin# | Pin Name  | Description               |
 |:-----|:----------|:--------------------------|
-| 1    | TxRx A +  |                           |
-| 2    | TxRx A -  |                           |
-| 3    | TxRx B +  |                           |
-| 4    | TxRx C +  |                           |
-| 5    | TxRx C -  |                           |
-| 6    | TxRx B -  |                           |
-| 7    | TxRx D +  |                           |
-| 8    | TxRx D -  |                           |
+| 1    | TxRx A +  | Bi-directional pair A +   |
+| 2    | TxRx A -  | Bi-directional pair A -   |
+| 3    | TxRx B +  | Bi-directional pair B +   |
+| 4    | TxRx C +  | Bi-directional pair C +   |
+| 5    | TxRx C -  | Bi-directional pair C -   |
+| 6    | TxRx B -  | Bi-directional pair B -   |
+| 7    | TxRx D +  | Bi-directional pair D +   |
+| 8    | TxRx D -  | Bi-directional pair D -   |
 
 ### P2 Port
 
-The P2 port is used to connect the main LTE antenna. It's a SMA connector.
+The P2 port SMA connector is used for the main LTE antenna.
 
 ### P3 Port
 
-The P3 port is used to connect the GNSS antenna. It's a SMA connector.
+The P3 port SMA connector is used for the GNSS antenna.
 
 ### P4 Port
 
-The P4 port is used to connect the auxiliary LTE antenna. Its' a SMA connector.
+The P4 port SMA connector is used for the auxiliary LTE antenna.
