--- a/pages/interface-modules/IB-0210.md
+++ b/pages/interface-modules/IB-0210.md
@@ -14,7 +14,7 @@ An interface module for interfacing up to 4 USB3.0 cameras and with digital I/O 
 ---
 
 <p align="center">
-<img src="/assets/images/pages/interface-blox/IB-0200/IB-0200%20Render.png" width="150">
+<img src="/assets/images/pages/interface-blox/IB-0210/IB-0210.png">
 </p>
 
 ## Description
